--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "framer-motion": "^11.18.2",
     "vaul": "^0.9.3",
     "zod": "^3.23.8",
-    "@stripe/stripe-js": "latest"
+    "@stripe/stripe-js": "latest",
+    "@stripe/react-stripe-js": "latest"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
